tests/rosetta/transpiler/CPP/bitwise-io-2.cpp
// Generated by Mochi transpiler v0.10.41 on 2025-07-26 20:50:12 GMT+7
#include <iostream>
#include <string>
#include <vector>
#include <any>
#include <map>
#include <sstream>
#include <type_traits>
#include <iomanip>
#include <cmath>
#include <optional>
#include <cstdlib>
#include <chrono>
#include <sys/resource.h>


static int _now() {
    static long long seed = 0;
    static bool seeded = false;
    if (!seeded) {
        const char* s = std::getenv("MOCHI_NOW_SEED");
        if (s && *s) { seed = std::atoll(s); seeded = true; }
    }
    if (seeded) {
        seed = (seed * 1664525 + 1013904223) % 2147483647;
        return static_cast<int>(seed);
    }
    return (int)(std::chrono::duration_cast<std::chrono::microseconds>(std::chrono::system_clock::now().time_since_epoch()).count() % 2147483647);
}
static long _mem() {
    struct rusage usage{};
    getrusage(RUSAGE_SELF, &usage);
#ifdef __APPLE__
    return usage.ru_maxrss;
#else
    return usage.ru_maxrss * 1024;
#endif
}
static long _index_of(const std::string& s, const std::string& sub) {
    auto pos = s.find(sub);
    return pos == std::string::npos ? -1 : static_cast<long>(pos);
}
template<typename T> long _index_of(const std::vector<T>& xs, const T& v) {
    for(size_t i=0;i<xs.size();++i){ if(xs[i]==v) return i; }
    return -1;
}
static long _parse_int_str(const std::string& s, long base) {
    return std::stol(s, nullptr, base);
}
static void any_to_stream(std::ostream& os, const std::any& val) {
    if(val.type() == typeid(int)) os << std::any_cast<int>(val);
    else if(val.type() == typeid(int64_t)) os << std::any_cast<int64_t>(val);
    else if(val.type() == typeid(double)) os << std::any_cast<double>(val);
    else if(val.type() == typeid(bool)) os << (std::any_cast<bool>(val) ? "true" : "false");
    else if(val.type() == typeid(std::string)) os << std::any_cast<std::string>(val);
    else if(val.type() == typeid(std::vector<int64_t>)) { const auto& v = std::any_cast<const std::vector<int64_t>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; os << v[i]; } os << ']'; }
    else if(val.type() == typeid(std::vector<std::vector<int64_t>>)) { const auto& vv = std::any_cast<const std::vector<std::vector<int64_t>>&>(val); os << '['; for(size_t i=0;i<vv.size();++i){ if(i>0) os << ', '; const auto& v = vv[i]; os << '['; for(size_t j=0;j<v.size();++j){ if(j>0) os << ', '; os << v[j]; } os << ']'; } os << ']'; }
    else if(val.type() == typeid(std::vector<std::string>)) { const auto& v = std::any_cast<const std::vector<std::string>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; os << v[i]; } os << ']'; }
    else if(val.type() == typeid(std::vector<std::any>)) { const auto& v = std::any_cast<const std::vector<std::any>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; any_to_stream(os, v[i]); } os << ']'; }
    else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
    else os << "<any>";
}
static double any_to_double(const std::any& v) {
    if(v.type() == typeid(int)) return (double)std::any_cast<int>(v);
    if(v.type() == typeid(double)) return std::any_cast<double>(v);
    return 0;
}
template <typename T>
std::ostream& operator<<(std::ostream& os, const std::vector<T>& vec) {
    os << "[";
    for(size_t i=0;i<vec.size();++i){ if(i>0) os << ", "; if constexpr(std::is_same_v<T, std::any>) any_to_stream(os, vec[i]); else os << vec[i]; }
    os << "]";
    return os;
}


template<typename T> std::string _to_string(const T& v) {
    std::ostringstream ss;
    ss << std::boolalpha << v;
    return ss.str();
}


struct Writer {
    std::string order;
    int64_t bits;
    int64_t nbits;
    std::vector<int64_t> data;
    auto operator<=>(const Writer&) const = default;
};

struct Reader {
    std::string order;
    std::vector<int64_t> data;
    int64_t idx;
    int64_t bits;
    int64_t nbits;
    auto operator<=>(const Reader&) const = default;
};

std::ostream& operator<<(std::ostream& os, const Writer& v) {
    os << '{' << "'order': "<< "'" << v.order << "'"
 << ", " << "'bits': "<< v.bits
 << ", " << "'nbits': "<< v.nbits
 << ", " << "'data': "<< "["; for(size_t i=0;i<v.data.size();++i){ if(i>0) os << ", "; os << v.data[i]; } os << "]"
 << '}';
    return os;
}

std::ostream& operator<<(std::ostream& os, const Reader& v) {
    os << '{' << "'order': "<< "'" << v.order << "'"
 << ", " << "'data': "<< "["; for(size_t i=0;i<v.data.size();++i){ if(i>0) os << ", "; os << v.data[i]; } os << "]"
 << ", " << "'idx': "<< v.idx
 << ", " << "'bits': "<< v.bits
 << ", " << "'nbits': "<< v.nbits
 << '}';
    return os;
}

int64_t pow2(int64_t n);
int64_t lshift(int64_t x, int64_t n);
int64_t rshift(int64_t x, int64_t n);
Writer NewWriter(std::string order);
Writer writeBitsLSB(Writer w, int64_t c, int64_t width);
Writer writeBitsMSB(Writer w, int64_t c, int64_t width);
Writer WriteBits(Writer w, int64_t c, int64_t width);
Writer CloseWriter(Writer w);
Reader NewReader(const std::vector<int64_t>& data, std::string order);
std::map<std::string, std::any> readBitsLSB(Reader r, int64_t width);
std::map<std::string, std::any> readBitsMSB(Reader r, int64_t width);
std::map<std::string, std::any> ReadBits(Reader r, int64_t width);
std::string toBinary(int64_t n, int64_t bits);
std::string bytesToBits(const std::vector<int64_t>& bs);
std::string bytesToHex(const std::vector<int64_t>& bs);
int64_t ord(std::string ch);
std::string chr(int64_t n);
std::vector<int64_t> bytesOfStr(std::string s);
std::string bytesToDec(const std::vector<int64_t>& bs);
void Example();
int main();

int64_t pow2(int64_t n) {
    int64_t v = 1;
    int64_t i = 0;
    while ((i < n)) {
        v = (v * 2);
        i = (i + 1);
    }
    return v;
}

int64_t lshift(int64_t x, int64_t n) {
    return (x * pow2(n));
}

int64_t rshift(int64_t x, int64_t n) {
    return (x / pow2(n));
}

Writer NewWriter(std::string order) {
    return Writer{order, 0, 0, {}};
}

Writer writeBitsLSB(Writer w, int64_t c, int64_t width) {
    w.bits = (w.bits + lshift(c, w.nbits));
    w.nbits = (w.nbits + width);
    while ((w.nbits >= 8)) {
        int64_t b = (w.bits % 256);
        w.data = ([&]{ auto __tmp = w.data; __tmp.push_back(b); return __tmp; }());
        w.bits = rshift(w.bits, 8);
        w.nbits = (w.nbits - 8);
    }
    return w;
}

Writer writeBitsMSB(Writer w, int64_t c, int64_t width) {
    w.bits = (w.bits + lshift(c, ((32 - width) - w.nbits)));
    w.nbits = (w.nbits + width);
    while ((w.nbits >= 8)) {
        int64_t b = (rshift(w.bits, 24) % 256);
        w.data = ([&]{ auto __tmp = w.data; __tmp.push_back(b); return __tmp; }());
        w.bits = ((w.bits % pow2(24)) * 256);
        w.nbits = (w.nbits - 8);
    }
    return w;
}

Writer WriteBits(Writer w, int64_t c, int64_t width) {
    if ((w.order == std::string("LSB"))) {
        return writeBitsLSB(w, c, width);
    }
    return writeBitsMSB(w, c, width);
}

Writer CloseWriter(Writer w) {
    if ((w.nbits > 0)) {
        if ((w.order == std::string("MSB"))) {
            w.bits = rshift(w.bits, 24);
        }
        w.data = ([&]{ auto __tmp = w.data; __tmp.push_back((w.bits % 256)); return __tmp; }());
    }
    w.bits = 0;
    w.nbits = 0;
    return w;
}

Reader NewReader(const std::vector<int64_t>& data, std::string order) {
    return Reader{order, data, 0, 0, 0};
}

std::map<std::string, std::any> readBitsLSB(Reader r, int64_t width) {
    while ((r.nbits < width)) {
        if ((r.idx >= r.data.size())) {
            return std::map<std::string, std::any>{{"val", std::any(0)}, {"eof", std::any(true)}};
        }
        int64_t b = r.data[r.idx];
        r.idx = (r.idx + 1);
        r.bits = (r.bits + lshift(b, r.nbits));
        r.nbits = (r.nbits + 8);
    }
    int64_t mask = (pow2(width) - 1);
    int64_t out = (r.bits % (mask + 1));
    r.bits = rshift(r.bits, width);
    r.nbits = (r.nbits - width);
    return std::map<std::string, std::any>{{"val", std::any(out)}, {"eof", std::any(false)}};
}

std::map<std::string, std::any> readBitsMSB(Reader r, int64_t width) {
    while ((r.nbits < width)) {
        if ((r.idx >= r.data.size())) {
            return std::map<std::string, std::any>{{"val", std::any(0)}, {"eof", std::any(true)}};
        }
        int64_t b = r.data[r.idx];
        r.idx = (r.idx + 1);
        r.bits = (r.bits + lshift(b, (24 - r.nbits)));
        r.nbits = (r.nbits + 8);
    }
    int64_t out = rshift(r.bits, (32 - width));
    r.bits = ((r.bits * pow2(width)) % pow2(32));
    r.nbits = (r.nbits - width);
    return std::map<std::string, std::any>{{"val", std::any(out)}, {"eof", std::any(false)}};
}

std::map<std::string, std::any> ReadBits(Reader r, int64_t width) {
    if ((r.order == std::string("LSB"))) {
        return readBitsLSB(r, width);
    }
    return readBitsMSB(r, width);
}

std::string toBinary(int64_t n, int64_t bits) {
    std::string b = std::string("");
    int64_t val = n;
    int64_t i = 0;
    while ((i < bits)) {
        b = (([&]{ std::ostringstream ss; ss << std::boolalpha << (val % 2); return ss.str(); }()) + b);
        val = (val / 2);
        i = (i + 1);
    }
    return b;
}

std::string bytesToBits(const std::vector<int64_t>& bs) {
    std::string out = std::string("[");
    int64_t i = 0;
    while ((i < bs.size())) {
        out = (out + toBinary(bs[i], 8));
        if (((i + 1) < bs.size())) {
            out = (out + std::string(" "));
        }
        i = (i + 1);
    }
    out = (out + std::string("]"));
    return out;
}

std::string bytesToHex(const std::vector<int64_t>& bs) {
    std::string digits = std::string("0123456789ABCDEF");
    std::string out = std::string("");
    int64_t i = 0;
    while ((i < bs.size())) {
        int64_t b = bs[i];
        int64_t hi = (b / 16);
        int64_t lo = (b % 16);
        out = ((out + ([&](const auto& __v){ if constexpr(std::is_same_v<std::decay_t<decltype(__v)>, std::string>) return __v.substr(hi, (hi + 1) - hi); else return std::vector<typename std::decay_t<decltype(__v)>::value_type>(__v.begin()+hi, __v.begin()+(hi + 1)); })(digits)) + ([&](const auto& __v){ if constexpr(std::is_same_v<std::decay_t<decltype(__v)>, std::string>) return __v.substr(lo, (lo + 1) - lo); else return std::vector<typename std::decay_t<decltype(__v)>::value_type>(__v.begin()+lo, __v.begin()+(lo + 1)); })(digits));
        if (((i + 1) < bs.size())) {
            out = (out + std::string(" "));
        }
        i = (i + 1);
    }
    return out;
}

int64_t ord(std::string ch) {
    std::string upper = std::string("ABCDEFGHIJKLMNOPQRSTUVWXYZ");
    std::string lower = std::string("abcdefghijklmnopqrstuvwxyz");
    int64_t idx = _index_of(upper, ch);
    if ((idx >= 0)) {
        return (65 + idx);
    }
    idx = _index_of(lower, ch);
    if ((idx >= 0)) {
        return (97 + idx);
    }
    if (((ch >= std::string("0")) && (ch <= std::string("9")))) {
        return (48 + _parse_int_str(ch, 10));
    }
    if ((ch == std::string(" "))) {
        return 32;
    }
    if ((ch == std::string("."))) {
        return 46;
    }
    return 0;
}

std::string chr(int64_t n) {
    std::string upper = std::string("ABCDEFGHIJKLMNOPQRSTUVWXYZ");
    std::string lower = std::string("abcdefghijklmnopqrstuvwxyz");
    if (((n >= 65) && (n < 91))) {
        return ([&](const auto& __v){ if constexpr(std::is_same_v<std::decay_t<decltype(__v)>, std::string>) return __v.substr((n - 65), (n - 64) - (n - 65)); else return std::vector<typename std::decay_t<decltype(__v)>::value_type>(__v.begin()+(n - 65), __v.begin()+(n - 64)); })(upper);
    }
    if (((n >= 97) && (n < 123))) {
        return ([&](const auto& __v){ if constexpr(std::is_same_v<std::decay_t<decltype(__v)>, std::string>) return __v.substr((n - 97), (n - 96) - (n - 97)); else return std::vector<typename std::decay_t<decltype(__v)>::value_type>(__v.begin()+(n - 97), __v.begin()+(n - 96)); })(lower);
    }
    if (((n >= 48) && (n < 58))) {
        std::string digits = std::string("0123456789");
        return ([&](const auto& __v){ if constexpr(std::is_same_v<std::decay_t<decltype(__v)>, std::string>) return __v.substr((n - 48), (n - 47) - (n - 48)); else return std::vector<typename std::decay_t<decltype(__v)>::value_type>(__v.begin()+(n - 48), __v.begin()+(n - 47)); })(digits);
    }
    if ((n == 32)) {
        return std::string(" ");
    }
    if ((n == 46)) {
        return std::string(".");
    }
    return std::string("?");
}

std::vector<int64_t> bytesOfStr(std::string s) {
    std::vector<int64_t> bs = {};
    int64_t i = 0;
    while ((i < s.size())) {
        bs = ([&]{ auto __tmp = bs; __tmp.push_back(ord(([&](const auto& __v){ if constexpr(std::is_same_v<std::decay_t<decltype(__v)>, std::string>) return __v.substr(i, (i + 1) - i); else return std::vector<typename std::decay_t<decltype(__v)>::value_type>(__v.begin()+i, __v.begin()+(i + 1)); })(s))); return __tmp; }());
        i = (i + 1);
    }
    return bs;
}

std::string bytesToDec(const std::vector<int64_t>& bs) {
    std::string out = std::string("");
    int64_t i = 0;
    while ((i < bs.size())) {
        out = (out + ([&]{ std::ostringstream ss; ss << std::boolalpha << bs[i]; return ss.str(); }()));
        if (((i + 1) < bs.size())) {
            out = (out + std::string(" "));
        }
        i = (i + 1);
    }
    return out;
}

void Example() {
    std::string message = std::string("This is a test.");
    std::vector<int64_t> msgBytes = bytesOfStr(message);
    std::cout << (((std::string("\"") + message) + std::string("\" as bytes: ")) + bytesToDec(msgBytes));
    std::cout << std::endl;
    std::cout << (std::string("    original bits: ") + bytesToBits(msgBytes));
    std::cout << std::endl;
    Writer bw = NewWriter(std::string("MSB"));
    int64_t i = 0;
    while ((i < msgBytes.size())) {
        bw = WriteBits(bw, msgBytes[i], 7);
        i = (i + 1);
    }
    bw = CloseWriter(bw);
    std::cout << (std::string("Written bitstream: ") + bytesToBits(bw.data));
    std::cout << std::endl;
    std::cout << (std::string("Written bytes: ") + bytesToHex(bw.data));
    std::cout << std::endl;
    Reader br = NewReader(bw.data, std::string("MSB"));
    std::string result = std::string("");
    while (true) {
        std::map<std::string, std::any> r = ReadBits(br, 7);
        if (std::any_cast<bool>(r[std::string("eof")])) {
            break;
        }
        int64_t v = std::any_cast<int64_t>(r[std::string("val")]);
        if ((v != 0)) {
            result = (result + chr(v));
        }
    }
    std::cout << ((std::string("Read back as \"") + result) + std::string("\""));
    std::cout << std::endl;
}

int main() {
    {
        auto __bench_start = _now();
        auto __bench_mem_start = _mem();
        Example();
        auto __bench_end = _now();
        auto __bench_mem_end = _mem();
        auto __bench_dur = __bench_end - __bench_start;
        auto __bench_mem = __bench_mem_end;
        std::cout << "{\n  \"duration_us\": " << __bench_dur << ",\n  \"memory_bytes\": " << __bench_mem << ",\n  \"name\": \"main\"\n}" << std::endl;
    }
    return 0;
}
